--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
-    "start": "next start",
+    "start": "serve out",
     "fmt": "pnpm rome check . --apply-suggested && pnpm rome format . --write"
   },
   "dependencies": {
@@ -40,6 +40,7 @@
     "postcss": "^8.4.21",
     "postcss-nesting": "^11.2.2",
     "rome": "^11.0.0",
+    "serve": "^14.2.1",
     "tailwindcss": "^3.2.7",
     "tailwindcss-debug-screens": "^2.2.1"
   },
